--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -13,4 +13,4 @@ jobs:
       - uses: actions/checkout@v2
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
-          feed_list: "https://nickdocode.com/feed/"
+          feed_list: "https://www.youtube.com/playlist?list=PLf8VIJy91gZoH_N3HWVli52KttCB_BkLQ"
