--- a/.github/workflows/youtube-workflow.yml
+++ b/.github/workflows/youtube-workflow.yml
@@ -13,4 +13,5 @@ jobs:
       - uses: actions/checkout@v2
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
+          comment_tag_name: 'YOUTUBE'
           feed_list: "https://www.youtube.com/playlist?list=PLf8VIJy91gZoH_N3HWVli52KttCB_BkLQ"
